--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,9 @@
         "string.h": "c",
         "inttypes.h": "c",
         "get_next_line.h": "c",
-        "fdf.h": "c"
+        "fdf.h": "c",
+        "stdio.h": "c",
+        "mlx.h": "c",
+        "unistd.h": "c"
     }
 }
