add colors for z's levels

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,8 @@
         "fdf.h": "c",
         "stdio.h": "c",
         "mlx.h": "c",
-        "unistd.h": "c"
+        "unistd.h": "c",
+        "colors.h": "c",
+        "error_message.h": "c"
     }
 }
