movement zoom draw_background

--- a/fdf/Makefile
+++ b/fdf/Makefile
@@ -21,7 +21,8 @@ LIBFT_HEADERS = $(LIBFT_DIRECTORY
 # Sources
 SOURCES_DIRECTORY = ./sources/
 SOURCES_LIST = main.c init.c parse.c draw.c \
-			design.c color.c utils.c utils2.c
+			design.c color.c utils.c utils2.c \
+			control.c key_manage.c management.c
 SOURCES = $(addprefix $(SOURCES_DIRECTORY), $(SOURCES_LIST))
 
 # OBJS files
